Changes in version 2.5.1 (Release date: )
==============
* Improve internals in built-in cluster functions so as to not make unnecessary nxn distance matrices.
* Set checkDiss=FALSE by default for most all functions.
* Add warnings when forced to calculate the nxn distance matrix 

Changes in version 2.3.0( Release date: May 3, 2019)
==============

Changes:
* MAJOR CHANGE TO CLASS (1): the dendrogram is now stored in the object as the S4 class `phylo4d` in the package `phylobase`. This allows easier manipulation of the dendrogram by the user (including user-defined dendrograms), as well as allowing storage of information about dendrogram nodes that the programs can make use of. The slot "dendro_outbranch" has been removed because this information is now stored in the `phylo4d` object.
* MAJOR CHANGE TO CLASS (2): the `coClustering` is now stored in the object as a sparse matrix of the S4 class `Matrix` from the package `Matrix`  
* New functions: 
 - `sampleDendrogram`, `clusterDendrogram`, `nodeLabels` to access and manipulate the stored dendrograms
 - `numericalAsCharacter` to allow create two digit characters from integers for better sorting of character versions of integers.
 - `getClusterIndex` function used to match argument `whichClusters` to indices of the `clusterMatrix` (previously was not exported or documented)
* Added arguments to the following functions: 
 - `whichClusters` to `getBestFeatures`
 - `calculateSample` to `makeDendrogram`
 - `plotType` to `plotClustersTable` (now allows "bubble" version of plot of overlap ), and many other arguments related to controlling the plotting.
 - `labelTracks` to `plotHeatmap` to control whether to add labels to colored tracks.