@@ -1,8 +1,9 @@
 Changes in version 2.5.1 (Release date: )
 ==============
 * Improve internals in built-in cluster functions so as to not make unnecessary nxn distance matrices.
-* Set checkDiss=FALSE by default for most all functions.
+* Set checkDiss=FALSE by default for most all functions (exception is when user defines distance function)
 * Add warnings when forced to calculate the nxn distance matrix 
+* Made default kmeans in subsampling if data type is "X"
 
 Changes in version 2.3.0( Release date: May 3, 2019)
 ==============
